Take much of Android Studio's linting advice.